--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
                 <p class="intro">I am now a CS master student at Tsinghua University, advised by Prof. Shi-Min Hu and
                     Prof. Song-Hai Zhang. My research interest lies in computer vision, computer graphics and
                     human-computer interaction.</p>
-                <p class="intro">I received my Bachelors' degree in CS and Economics (dual) from Tsinghua University in
+                <p class="intro">I received my Bachelors' degree in CS and Economics (Second Major) from Tsinghua
+                    University in
                     June, 2020.
                 </p>
                 <p class="intro">I know it's hard to always view everything without any prejudice, but I will try my
@@ -61,18 +62,20 @@
         </div>
         <div class="section">
             <p class="section-name">Miscellaneous</p>
-            <p class="intro misc">I love reading rooks in my free time, books that I recently read include <em>Justice:
+            <p class="intro misc">I love reading rooks in my free time. Actually I am a desultory reader, books that I
+                recently read include <em>The Structure of Scientific Revolution, A Promised Land, Justice:
                     What's
                     the right thing to do, Becoming, The Silent Patient, 乡土中国, 万历十五年</em> etc. If you like books
                 regarding philosophy, culture, biography or any other interesting topics, feel free to recommend them to
-                me.</p>
+                me.
+            </p>
 
             <p class="intro misc">I also play and watch basketball if possible. BTW, I'm a fan of GSW.</p>
         </div>
         <div class="footer">
-            <p style="text-align: center;">This website was last updated by Chen in Nov, 2020.</p>
-            <p style="text-align: center; font-size: 12px;">Design of this website references <a
-                    href="https://jonbarron.info/">Jon</a></p>
+            <p style="text-align: center;">This website was last updated by Chen in Feb, 2021.</p>
+            <p style="text-align: center; font-size: 12px;">Credit to <a href="https://jonbarron.info/">Jon</a> for his
+                clean and concise website design.</p>
         </div>
     </div>
 
