--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
         </div>
         <div class="section">
             <p class="section-name">Miscellaneous</p>
-            <p class="intro misc">I love reading rooks in my free time. Actually I am a desultory reader, books that I
-                recently read include <em>The Structure of Scientific Revolution, A Promised Land, Justice:
+            <p class="intro misc">I do desultory reading in my free time, books that I
+                recently read include <em>Educated, The Structure of Scientific Revolution, A Promised Land, Justice:
                     What's
                     the right thing to do, Becoming, The Silent Patient, 乡土中国, 万历十五年</em> etc. If you like books
                 regarding philosophy, culture, biography or any other interesting topics, feel free to recommend them to
                 me.
             </p>
 
-            <p class="intro misc">I also play and watch basketball if possible. BTW, I'm a fan of GSW.</p>
+            <p class="intro misc">I am also an amateur left-handed basketball player (may retire soon). BTW, I'm a fan of DubNation.</p>
         </div>
         <div class="footer">
             <p style="text-align: center;">This website was last updated by Chen in Feb, 2021.</p>
