--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Chen Wang</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://fonts.googleapis.com/css?family=Pinyon Script' rel='stylesheet'>
+    <script src="script.js"></script>
 </head>
 
 <body>
@@ -41,11 +42,12 @@
             <p class="section-name">Experiences</p>
             <div class="exp-list">
                 <ul>
-                    <li>2020.08 - Present: Research Assistant at Graphics and Geometry Group, DCST, Tsinghua University
+                    <li>2020.08 - Present: Graduate Research Assistant at Graphics and Geometry Group, DCST, Tsinghua
+                        University
                     </li>
                     <li>2020.06 - 2020.08: Software Engineer Intern at Tencent</li>
                     <li>2019.07 - 2019.08: Visiting student at University of Southern California</li>
-                    <li>2018.10 - 2020.06: Research Assistant at HCI group, DCST, Tsinghua University</li>
+                    <li>2018.10 - 2020.06: Undergraduate Research Assistant at HCI group, DCST, Tsinghua University</li>
                 </ul>
             </div>
         </div>
@@ -61,16 +63,22 @@
             </div>
         </div>
         <div class="section">
-            <p class="section-name">Miscellaneous</p>
-            <p class="intro misc">I do desultory reading in my free time, books that I
-                recently read include <em>Educated, The Structure of Scientific Revolution, A Promised Land, Justice:
-                    What's
-                    the right thing to do, Becoming, The Silent Patient, 乡土中国, 万历十五年</em> etc. If you like books
-                regarding philosophy, culture, biography or any other interesting topics, feel free to recommend them to
-                me.
-            </p>
-
-            <p class="intro misc">I am also an amateur left-handed basketball player (may retire soon). BTW, I'm a fan of DubNation.</p>
+            <button type="button" class="section-name collapsible" id="coll">Miscellaneous</button>
+            <div class="collapse-content">
+                <div class="intro misc">I do desultory reading in my free time, books that I
+                    recently read include <em>Educated, Love in the time of Cholera, The Structure of Scientific
+                        Revolution,
+                        A Promised Land, Justice: What's the right thing to do, Becoming, The Silent Patient, 乡土中国,
+                        万历十五年</em> etc. If you like books
+                    regarding philosophy, culture, biography or any other interesting topics, feel free to recommend
+                    them to
+                    me.
+                </div>
+                <div class="intro misc">
+                    I am also an amateur left-handed basketball player (retired). BTW, I'm a fan
+                    of DubNation.
+                </div>
+            </div>
         </div>
         <div class="footer">
             <p style="text-align: center;">This website was last updated by Chen in Feb, 2021.</p>
