add click to expand

--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
             </div>
         </div>
         <div class="section">
-            <button type="button" class="section-name collapsible" id="coll">Miscellaneous</button>
-            <div class="collapse-content">
+            <button type="button" onclick="expandMisc()" class="section-name collapsible" id="coll">Misc
+                (Click if Interested)</button>
+            <div id="misc" class="collapse-content">
                 <div class="intro misc">I do desultory reading in my free time, books that I
                     recently read include <em>Educated, Love in the time of Cholera, The Structure of Scientific
                         Revolution,
@@ -80,11 +81,12 @@
                 </div>
             </div>
         </div>
-        <div class="footer">
-            <p style="text-align: center;">This website was last updated by Chen in Feb, 2021.</p>
-            <p style="text-align: center; font-size: 12px;">Credit to <a href="https://jonbarron.info/">Jon</a> for his
+        <footer>
+            <p>This website was last updated by Chen in May, 2021.</p>
+            <p style="font-size: 12px;">Credit to <a href="https://jonbarron.info/">Jon</a> for his
                 clean and concise website design.</p>
-        </div>
+            <p>© Copyright 2021 </p>
+        </footer>
     </div>
 
 </body>
