--- a/index.html
+++ b/index.html
@@ -17,25 +17,19 @@
             <div class="left">
                 <h1 id="name">Chen Wang (王琛) </h1>
                 <p class="intro">I am now a CS master student at Tsinghua University, advised by Prof. Shi-Min Hu and
-                    Prof. Song-Hai Zhang. My research interest lies in computer vision, computer graphics and
-                    human-computer interaction.</p>
+                    Prof. Song-Hai Zhang. My research interest lies in computer vision, computer graphics.</p>
                 <p class="intro">I received my Bachelors' degree in CS and Economics (Second Major) from Tsinghua
-                    University in
-                    June, 2020.
+                    University in June, 2020.
                 </p>
-                <p class="intro">I know it's hard to always view everything without any prejudice, but I will try my
-                    best to reach that goal. </p>
-                <p class="intro quote">"For in the back of our minds are hidden assumptions, biases, and prejudices that
-                    determine how we perceive reality, what facts we look at, and how we judge their importance and
-                    merits."</p>
+                <p class="intro quote">"Our primary drive in life is not pleasure, but the discovery and pursuit of what we personally find meaningful."</p>
                 <div class="links">
                     <a href="mailto:wchen20@mails.tsinghua.edu.cn">Email</a>
-                    <a href="data/cv.pdf">CV</a>
+                    <a href="data/CV_en.pdf">CV</a>
                     <a href="https://www.linkedin.com/in/%E7%90%9B-%E7%8E%8B-05509b161/">Linkedin</a>
                 </div>
             </div>
             <div class="right">
-                <img class="avatar" src="data/test.JPG" display="block">
+                <img class="avatar" src="data/pic.JPG" display="block">
             </div>
         </div>
         <div class="section experience">
@@ -56,7 +50,7 @@
             <div class="pub-list">
                 <ul>
                     <li>PalmBoard: Leveraging Implicit Touch Pressure in Statistical Decoding for Indirect Text Entry.
-                        <em>Xin Yi, <strong>Chen Wang</strong>, Xiaojun Bi, Yuanchun Shi.</em> CHI'20 (<a
+                        <em>Xin Yi, <u>Chen Wang</u>, Xiaojun Bi, Yuanchun Shi.</em> CHI'20 (<a
                             href="https://www.youtube.com/watch?v=QyvJfqplGdI&t=408s">Talk</a>)
                     </li>
                 </ul>
@@ -83,8 +77,6 @@
         </div>
         <footer>
             <p>This website was last updated by Chen in May, 2021.</p>
-            <p style="font-size: 12px;">Credit to <a href="https://jonbarron.info/">Jon</a> for his
-                clean and concise website design.</p>
             <p>© Copyright 2021 </p>
         </footer>
     </div>
