--- a/nerf-sr/index.html
+++ b/nerf-sr/index.html
@@ -106,7 +106,7 @@
                 <div class="col-md-4 col-md-offset-4 text-center">
                     <ul class="nav nav-pills nav-justified">
                         <li>
-                            <a href="https://arxiv.org/abs/TODO">
+                            <a href="https://arxiv.org/abs/2112.01759">
                             <image src="img/nerf-sr_paper_thumbnail.png" height="60px">
                                 <h4><strong>Paper</strong></h4>
                             </a>
