--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="left">
                 <h1 id="name">Chen Wang (王琛) </h1>
                 <p class="intro">I am now a CS master student at Tsinghua University, advised by Prof. Shi-Min Hu and
-                    Prof. Song-Hai Zhang. My research interest lies in computer vision, computer graphics.</p>
+                    Prof. Song-Hai Zhang. My research interest lies in computer vision, computer graphics. My research goal aims to help machines to perceive the 3D world, which involves 3D scene understanding, modelling and interaction.</p>
                 <p class="intro">I received my Bachelors' degree in CS and Economics (Second Major) from Tsinghua
                     University in June, 2020.
                 </p>
@@ -30,6 +30,32 @@
             </div>
             <div class="right">
                 <img class="avatar" src="data/pic.JPG" display="block">
+            </div>
+        </div>
+        <div class="section publications">
+            <p class="section-name">Publications</p>
+            <div class="pub-list">
+                <ul>
+                    <li>NeRF-SR: High-Quality Neural Radiance Fields using Super-sampling</li>
+                    <li><u>Chen Wang</u>, Xian Wu, Yuan-Chen Guo, Song-Hai Zhang, Yu-Wing Tai, Shi-Min Hu</li>
+                    <li><em>Arxiv Preprint, 2022</em></li>
+                    <li style="margin-bottom: 10px"><a
+                        href="https://arxiv.org/abs/2112.01759">Paper</a>&nbsp;|&nbsp;<a
+                        href="https://cwchenwang.github.io/nerf-sr">Project Page</a></li>
+
+                    <li>Learning Implicit Glyph Shape Representation</li>
+                    <li>Ying-Tian Liu, Yuan-Chen Guo, Yi-Xiao Li, <u>Chen Wang</u>, Song-Hai Zhang</li>
+                    <li style="margin-bottom: 10px"><em>IEEE Transactions on Visualization and Computer Graphics, 2022</em></li>
+
+                    <li>On Rotation Gains Within and Beyond Perceptual Limitations for Seated VR</li>
+                    <li><u>Chen Wang</u>, Song-Hai Zhang, Yi-Zhuo Zhang, Stefanie Zollmann, Shi-Min Hu</li>
+                    <li style="margin-bottom: 10px"><em>IEEE Transactions on Visualization and Computer Graphics, 2022</em></li>
+
+                    <li>PalmBoard: Leveraging Implicit Touch Pressure in Statistical Decoding for Indirect Text Entry.</li>
+                    <li>Xin Yi, <u>Chen Wang</u>, Xiaojun Bi, Yuanchun Shi (First Student Author)</li> 
+                    <li style="margin-bottom: 10px"><em>ACM CHI Conference on Human Factors in Computing Systems, 2020</em> (<a
+                        href="https://www.youtube.com/watch?v=QyvJfqplGdI&t=408s">Talk</a>)</li>
+                </ul>
             </div>
         </div>
         <div class="section experience">
@@ -45,18 +71,7 @@
                 </ul>
             </div>
         </div>
-        <div class="section publications">
-            <p class="section-name">Publications</p>
-            <div class="pub-list">
-                <ul>
-                    <li>PalmBoard: Leveraging Implicit Touch Pressure in Statistical Decoding for Indirect Text Entry.
-                        <em>Xin Yi, <u>Chen Wang</u>, Xiaojun Bi, Yuanchun Shi.</em> CHI'20 (<a
-                            href="https://www.youtube.com/watch?v=QyvJfqplGdI&t=408s">Talk</a>)
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="section">
+        <!-- <div class="section">
             <button type="button" onclick="expandMisc()" class="section-name collapsible" id="coll">Misc
                 (Click if Interested)</button>
             <div id="misc" class="collapse-content">
@@ -74,9 +89,9 @@
                     of DubNation.
                 </div>
             </div>
-        </div>
+        </div> -->
         <footer>
-            <p>This website was last updated by Chen in May, 2021.</p>
+            <p>This website was last updated by Chen in May, 2022.</p>
             <p>© Copyright 2021 </p>
         </footer>
     </div>
