--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div class="row intro">
             <div class="col-9">
                 <h1 class="text-center">Chen Wang (王琛)</h1>
-                <p>I am now a CS master student at Tsinghua University, advised by Prof. Shi-Min Hu and
-                    Prof. Song-Hai Zhang. My research interest lies in computer vision, computer graphics. My research goal aims to help machines to perceive the 3D world, which involves 3D scene understanding, modelling and interaction.</p>
+                <p>I am a two-year CS master student at Tsinghua University, advised by Prof. Shi-Min Hu and
+                    Prof. Song-Hai Zhang. My research interest lies in computer vision, computer graphics. My long-term research goal aims to help machines to perceive the 3D world, which involves 3D scene understanding, modelling and interaction.</p>
                 <p>I received my Bachelors' degree in CS and Economics (Second Major) from Tsinghua
                     University in June, 2020.
                 </p>
@@ -40,6 +40,14 @@
                 <p class="section-name">Publications</p>
                 <div class="pub-list pub-link">
                     <ul>
+                        <li style="margin-bottom: 10px">Full List on <a href="https://scholar.google.com/citations?user=5cY3Ho4AAAAJ&hl=en">Google Scholar</a></li>
+
+                        <li>DeepPortraitDrawing: Generating Human Body Images from Freehand Sketches</li>
+                        <li>Xian Wu*, <u>Chen Wang*</u>, Hongbo Fu, Ariel Shamir, Song-Hai Zhang, Shi-Min Hu (Equal Contribution)</li>
+                        <li><em>Arxiv Preprint, 2022</em></li>
+                        <li style="margin-bottom: 10px"><a
+                            href="https://arxiv.org/abs/2205.02070">Paper</a></li>
+                            
                         <li>NeRF-SR: High-Quality Neural Radiance Fields using Super-sampling</li>
                         <li><u>Chen Wang</u>, Xian Wu, Yuan-Chen Guo, Song-Hai Zhang, Yu-Wing Tai, Shi-Min Hu</li>
                         <li><em>Arxiv Preprint, 2022</em></li>
