--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="row intro">
             <div class="col-9">
                 <h1 class="text-center">Chen Wang (王琛)</h1>
-                <p>I am a two-year CS master student at Tsinghua University, advised by Prof. Shi-Min Hu and
+                <p>I am a second year CS master student at Tsinghua University, advised by Prof. Shi-Min Hu and
                     Prof. Song-Hai Zhang. My research interest lies in computer vision, computer graphics. My long-term research goal aims to help machines to perceive the 3D world, which involves 3D scene understanding, modelling and interaction.</p>
                 <p>I received my Bachelors' degree in CS and Economics (Second Major) from Tsinghua
                     University in June, 2020.
@@ -50,7 +50,7 @@
                             
                         <li>NeRF-SR: High-Quality Neural Radiance Fields using Super-sampling</li>
                         <li><u>Chen Wang</u>, Xian Wu, Yuan-Chen Guo, Song-Hai Zhang, Yu-Wing Tai, Shi-Min Hu</li>
-                        <li><em>Arxiv Preprint, 2022</em></li>
+                        <li><em>ACM Multimedia, 2022</em></li>
                         <li style="margin-bottom: 10px"><a
                             href="https://arxiv.org/abs/2112.01759">Paper</a>&nbsp;|&nbsp;<a
                             href="https://cwchenwang.github.io/nerf-sr">Project Page</a></li>
