--- a/nerf-sr/index.html
+++ b/nerf-sr/index.html
@@ -39,7 +39,7 @@
             <h2 class="col-md-12 text-center">
                 NeRF-SR: High-Quality Neural Radiance Fields using Super-Sampling<br>
                 <small>
-                    arXiv 2021
+                    ACM Multimedia 2022
                 </small>
             </h2>
         </div>
@@ -108,12 +108,12 @@
                                 <h4><strong>Video</strong></h4>
                             </a>
                         </li>
-<!--                         <li>
-                            <a href="https://github.com/">
+                        <li>
+                            <a href="https://github.com/cwchenwang/NeRF-SR">
                             <image src="img/github.png" height="60px">
                                 <h4><strong>Code</strong></h4>
                             </a>
-                        </li> -->
+                        </li>
                     </ul>
                 </div>
         </div>
@@ -126,7 +126,7 @@
                     Abstract
                 </h3>
                 <p class="text-justify">
-                    We present NeRF-SR, a solution for high-resolution (HR) novel view synthesis with mostly low-resolution (LR) inputs. Our method is built upon Neural Radiance Fields (NeRF) that predicts per-point density and color with a multi-layer perceptron. While producing images at arbitrary scales, NeRF struggles with resolutions that go beyond observed images. Our key insight is that NeRF has a local prior, which means predictions of a 3D point can be propagated in the nearby region and remain accurate. We first exploit it by a super-sampling strategy that shoots multiple rays at each image pixel, which enforces multi-view constraint at a sub-pixel level. Then, we show that NeRF-SR can further boost the performance of super-sampling by a refinement network that leverages the estimated depth at hand to hallucinate details from related patches on an HR reference image. Experiment results demonstrate that NeRF-SR generates high-quality results for novel view synthesis at HR on both synthetic and real-world datasets.
+                    We present NeRF-SR, a solution for high-resolution (HR) novel view synthesis with mostly low-resolution (LR) inputs. Our method is built upon Neural Radiance Fields (NeRF) \cite{mildenhall2020nerf} that predicts per-point density and color with a multi-layer perceptron. While producing images at arbitrary scales, NeRF struggles with resolutions that go beyond observed images. Our key insight is that NeRF benefits from 3D consistency, which means an observed pixel absorbs information from nearby views. We first exploit it by a super-sampling strategy that shoots multiple rays at each image pixel, which further enforces multi-view constraint at a sub-pixel level. Then, we show that NeRF-SR can further boost the performance of super-sampling by a refinement network that leverages the estimated depth at hand to hallucinate details from related patches on an HR reference image. Experiment results demonstrate that NeRF-SR generates high-quality results for novel view synthesis at HR on both synthetic and real-world datasets.
                 </p>
                 <image src="img/pipeline.png" class="img-responsive" alt="overview">
             </div>
