update nerf-sr link

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <li><em>ACM Multimedia, 2022</em></li>
                         <li style="margin-bottom: 10px"><a
                             href="https://arxiv.org/abs/2112.01759">Paper</a>&nbsp;|&nbsp;<a
-                            href="https://cwchenwang.github.io/nerf-sr">Project Page</a><a href="https://github.com/cwchenwang/nerf-sr">Code</a></li></a></li>
+                            href="https://cwchenwang.github.io/NeRF-SR">Project Page</a>&nbsp;|&nbsp;<a href="https://github.com/cwchenwang/NeRF-SR">Code</a></li></a></li>
 
                         <li>Learning Implicit Glyph Shape Representation</li>
                         <li>Ying-Tian Liu, Yuan-Chen Guo, Yi-Xiao Li, <u>Chen Wang</u>, Song-Hai Zhang</li>
