--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
         <div class="row intro">
             <div class="col-9">
                 <h1 class="text-center">Chen Wang (王琛)</h1>
+                <p style="font-size: 16pt; color: rgb(230, 28, 28);">I am applying for a Ph.D. program in Vision & Graphics starting from Fall 2023!</p>
                 <p>I am a second year CS master student at Tsinghua University, advised by Prof. Shi-Min Hu and
                     Prof. Song-Hai Zhang. My research interest lies in computer vision, computer graphics. My long-term research goal aims to help machines to perceive the 3D world, which involves 3D scene understanding, modelling and interaction.</p>
-                <p>I received my Bachelors' degree in CS and Economics (Second Major) from Tsinghua
+                <p>I received my Bachelors' degree in CS and Economics from Tsinghua
                     University in June, 2020.
                 </p>
                 <p class="quote">"Our primary drive in life is not pleasure, but the discovery and pursuit of what we personally find meaningful. (In Man's Search For Meaning)"</p>
@@ -50,6 +51,11 @@
                 <div class="pub-list pub-link">
                     <ul>
                         <li style="margin-bottom: 10px">Full List on <a href="https://scholar.google.com/citations?user=5cY3Ho4AAAAJ&hl=en">Google Scholar</a></li>
+
+                        <li>StructNeRF: Neural Radiance Fields for Indoor Scenes with Structural Hints</li>
+                        <li>Zheng Chen, <u>Chen Wang</u>, Yuan-Chen Guo, Song-Hai Zhang</li>
+                        <li><em>Submitted to a Journal</em></li>
+                        <li style="margin-bottom: 10px"></li>
 
                         <li>DeepPortraitDrawing: Generating Human Body Images from Freehand Sketches</li>
                         <li>Xian Wu*, <u>Chen Wang*</u>, Hongbo Fu, Ariel Shamir, Song-Hai Zhang, Shi-Min Hu (Equal Contribution)</li>
