--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
         <div class="row justify-content-center">
             <div class="col-10">
-                <p class="section-name">Professor Services</p>
+                <p class="section-name">Professional Services</p>
                 <div class="exp-list">
                     <ul>
                         <li>Reviewer: CVMJ 2022, ICLR 2023
