--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <p class="section-name">Professional Services</p>
                 <div class="exp-list">
                     <ul>
-                        <li>Reviewer: CVMJ 2022, ICLR 2023
+                        <li>Reviewer: CVPR 2023, ICLR 2023
                         </li>
                     </ul>
                 </div>
@@ -125,6 +125,20 @@
                         <li>2020.06 - 2020.08: Software Engineer Intern at Tencent</li>
                         <li>2019.07 - 2019.08: Visiting student at University of Southern California</li>
                         <li>2018.10 - 2020.06: Undergraduate Research Assistant at HCI group, DCST, Tsinghua University</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-10">
+                <p class="section-name">Honors and Awards</p>
+                <div class="exp-list">
+                    <ul>
+                        <li>2022 Tsinghua Top Talent Scholarship, Finalist
+                        </li>
+                        <li>2022 National Scholarship
+                        </li>
+                        <li>2022 Siebel Scholarship</li>
                     </ul>
                 </div>
             </div>
