--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
                 <p style="font-size: 16pt; color: rgb(230, 28, 28);">I am applying for a Ph.D. program in Vision & Graphics starting from Fall 2023!</p>
                 <p>I am a final year CS master student at Tsinghua University, advised by Prof. Shi-Min Hu and
                     Prof. Song-Hai Zhang. My research interest lies in computer vision, computer graphics. My long-term research goal aims to help machines to perceive the 3D world, which involves 3D scene understanding, modelling and interaction.</p>
-                <p>I received my Bachelors' degree in CS and Economics from Tsinghua
+                <p>I received my B.E. in CS and B.A. in Economics from Tsinghua
                     University in June, 2020.
                 </p>
                 <!-- <p class="quote">"Our primary drive in life is not pleasure, but the discovery and pursuit of what we personally find meaningful. (In Man's Search For Meaning)"</p> -->
                 <div class="links text-center">
-                    <a href="mailto:wchen20@mails.tsinghua.edu.cn">Email</a>
+                    <a href="mailto:cw.chenwang@outlook.com">Email</a>
                     <a href="data/CV_en.pdf">CV</a>
                     <a href="https://www.linkedin.com/in/%E7%90%9B-%E7%8E%8B-05509b161/">Linkedin</a>
                 </div>
@@ -69,7 +69,7 @@
 
                         <li>StructNeRF: Neural Radiance Fields for Indoor Scenes with Structural Hints</li>
                         <li>Zheng Chen, <u>Chen Wang</u>, Yuan-Chen Guo, Song-Hai Zhang</li>
-                        <li><em>Submitted to a Journal</em></li>
+                        <li><em>In Revision of TPAMI</em></li>
                         <li style="margin-bottom: 10px"></li>
 
                         <li>DeepPortraitDrawing: Generating Human Body Images from Freehand Sketches</li>
