--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="row intro">
             <div class="col-9">
                 <h1 class="text-center">Chen Wang (王琛)</h1>
-                <p style="font-size: 16pt; color: rgb(230, 28, 28);">I am applying for a Ph.D. program in Vision & Graphics starting from Fall 2023!</p>
+                <p style="font-size: 15pt; color: rgb(230, 28, 28);">I will join UPenn at Fall 2023 for my PhD study!</p>
                 <p>I am a final year CS master student at Tsinghua University, advised by Prof. Shi-Min Hu and
                     Prof. Song-Hai Zhang. My research interest lies in computer vision, computer graphics. My long-term research goal aims to help machines to perceive the 3D world, which involves 3D scene understanding, modelling and interaction.</p>
                 <p>I received my B.E. in CS and B.A. in Economics from Tsinghua
