--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
                 <div class="pub-list pub-link">
                     <ul>
                         <li style="margin-bottom: 10px">See full List on <a href="https://scholar.google.com/citations?user=5cY3Ho4AAAAJ&hl=en">Google Scholar</a></li>
+                        <li>StructNeRF: Neural Radiance Fields for Indoor Scenes with Structural Hints</li>
+                        <li>Yuan-Chen Guo, Yan-Pei Cao, <u>Chen Wang</u>, Yu He, Ying Shan, Xiaohu Qie, Song-Hai Zhang</li>
+                        <li style="margin-bottom: 10px"><a
+                            href="https://arxiv.org/abs/2303.16184">Paper</a></li>
 
                         <li>StructNeRF: Neural Radiance Fields for Indoor Scenes with Structural Hints</li>
                         <li>Zheng Chen, <u>Chen Wang</u>, Yuan-Chen Guo, Song-Hai Zhang</li>
