--- a/index.html
+++ b/index.html
@@ -43,10 +43,9 @@
         <div class="row intro">
             <div class="col-9">
                 <h1 class="text-center">Chen Wang (王琛)</h1>
-                <p style="font-size: 15pt; color: rgb(230, 28, 28);">I will join UPenn at Fall 2023 for my PhD study!</p>
-                <p>I am a final year CS master student at Tsinghua University, advised by Prof. Shi-Min Hu and
-                    Prof. Song-Hai Zhang. My research interest lies in computer vision, computer graphics. My long-term research goal aims to help machines to perceive the 3D world, which involves 3D scene understanding, modelling and interaction.</p>
-                <p>I received my B.E. in CS and B.A. in Economics from Tsinghua
+                <p>I am an incoming CIS PhD student at the University of Pennsylvania, advised by Prof. Lingjie Liu. My research interest lies in computer graphics and computer vision, especially 3D generation. </p>
+                    <!-- My long-term research goal aims to help machines to perceive the 3D world, which involves 3D scene understanding, modelling and interaction.</p> -->
+                <p>I graduated with a M.S. in CS from Tsinghua University in June, 2023, working with Prof. Shi-Min Hu and Prof. Song-Hai Zhang. Before that, I received a B.E. in CS and a B.A. in Economics from Tsinghua
                     University in June, 2020.
                 </p>
                 <!-- <p class="quote">"Our primary drive in life is not pleasure, but the discovery and pursuit of what we personally find meaningful. (In Man's Search For Meaning)"</p> -->
@@ -69,7 +68,8 @@
                         <li>StructNeRF: Neural Radiance Fields for Indoor Scenes with Structural Hints</li>
                         <li>Yuan-Chen Guo, Yan-Pei Cao, <u>Chen Wang</u>, Yu He, Ying Shan, Xiaohu Qie, Song-Hai Zhang</li>
                         <li style="margin-bottom: 10px"><a
-                            href="https://arxiv.org/abs/2303.16184">Paper</a></li>
+                            href="https://arxiv.org/abs/2303.16184">Paper</a>&nbsp;|&nbsp;<a
+                            href="https://bennyguo.github.io/vmesh/">Project Page</a>
 
                         <li>StructNeRF: Neural Radiance Fields for Indoor Scenes with Structural Hints</li>
                         <li>Zheng Chen, <u>Chen Wang</u>, Yuan-Chen Guo, Song-Hai Zhang</li>
@@ -89,20 +89,20 @@
                             href="https://arxiv.org/abs/2112.01759">Paper</a>&nbsp;|&nbsp;<a
                             href="https://cwchenwang.github.io/NeRF-SR">Project Page</a>&nbsp;|&nbsp;<a href="https://github.com/cwchenwang/NeRF-SR">Code</a></li></a></li>
 
-                        <li>Learning Implicit Glyph Shape Representation</li>
+                        <!-- <li>Learning Implicit Glyph Shape Representation</li>
                         <li>Ying-Tian Liu, Yuan-Chen Guo, Yi-Xiao Li, <u>Chen Wang</u>, Song-Hai Zhang</li>
-                        <li style="margin-bottom: 10px"><em>IEEE Transactions on Visualization and Computer Graphics, 2022</em></li>
+                        <li style="margin-bottom: 10px"><em>IEEE Transactions on Visualization and Computer Graphics, 2022</em></li> -->
 
                         <li>On Rotation Gains Within and Beyond Perceptual Limitations for Seated VR</li>
                         <li><u>Chen Wang</u>, Song-Hai Zhang, Yi-Zhuo Zhang, Stefanie Zollmann, Shi-Min Hu</li>
                         <li style="margin-bottom: 10px"><em>IEEE Transactions on Visualization and Computer Graphics, 2022</em></li>
 
-                        <li>PalmBoard: Leveraging Implicit Touch Pressure in Statistical Decoding for Indirect Text Entry.</li>
+                        <!-- <li>PalmBoard: Leveraging Implicit Touch Pressure in Statistical Decoding for Indirect Text Entry.</li>
                         <li>Xin Yi, <u>Chen Wang</u>, Xiaojun Bi, Yuanchun Shi (First Student Author)</li> 
                         <li><em>ACM CHI Conference on Human Factors in Computing Systems, 2020</em></li>
                         <li style="margin-bottom: 10px"><a
                             href="https://github.com/cwchenwang/PalmBoard">Code</a>&nbsp;|&nbsp;<a
-                            href="https://www.youtube.com/watch?v=QyvJfqplGdI&t=408s">Video</a></li>
+                            href="https://www.youtube.com/watch?v=QyvJfqplGdI&t=408s">Video</a></li> -->
                     </ul>
                 </div>
             </div>
@@ -112,7 +112,7 @@
                 <p class="section-name">Professional Services</p>
                 <div class="exp-list">
                     <ul>
-                        <li>Reviewer: CVPR 2023, ICLR 2023
+                        <li>Reviewer: ACM MM 2023, CVPR 2023, ICLR 2023
                         </li>
                     </ul>
                 </div>
@@ -148,8 +148,8 @@
             </div>
         </div>
         <footer class="text-center">
-            <p>This website was last updated by Chen in Oct, 2022.</p>
-            <p>© Copyright 2021 - 2022</p>
+            <p>This website was last updated by Chen in May, 2023.</p>
+            <p>© Copyright 2021 - 2023</p>
         </footer>
     </div>
 
