--- a/index.html
+++ b/index.html
@@ -64,12 +64,11 @@
                 <p class="section-name">Publications</p>
                 <div class="pub-list pub-link">
                     <ul>
-                        <li style="margin-bottom: 10px">See full List on <a href="https://scholar.google.com/citations?user=5cY3Ho4AAAAJ&hl=en">Google Scholar</a></li>
-                        <li>VMesh: Hybrid Volume-Mesh Representation for Efficient View Synthesis</li>
+                        <!-- <li>VMesh: Hybrid Volume-Mesh Representation for Efficient View Synthesis</li>
                         <li>Yuan-Chen Guo, Yan-Pei Cao, <u>Chen Wang</u>, Yu He, Ying Shan, Xiaohu Qie, Song-Hai Zhang</li>
                         <li style="margin-bottom: 10px"><a
                             href="https://arxiv.org/abs/2303.16184">Paper</a>&nbsp;|&nbsp;<a
-                            href="https://bennyguo.github.io/vmesh/">Project Page</a>
+                            href="https://bennyguo.github.io/vmesh/">Project Page</a> -->
 
                         <li>StructNeRF: Neural Radiance Fields for Indoor Scenes with Structural Hints</li>
                         <li>Zheng Chen, <u>Chen Wang</u>, Yuan-Chen Guo, Song-Hai Zhang</li>
@@ -78,7 +77,7 @@
 
                         <li>DeepPortraitDrawing: Generating Human Body Images from Freehand Sketches</li>
                         <li>Xian Wu*, <u>Chen Wang*</u>, Hongbo Fu, Ariel Shamir, Song-Hai Zhang, Shi-Min Hu (Equal Contribution)</li>
-                        <li><em>Arxiv Preprint, 2022, Under modfication</em></li>
+                        <li><em>Computer & Graphics, 2023</em></li>
                         <li style="margin-bottom: 10px"><a
                             href="https://arxiv.org/abs/2205.02070">Paper</a></li>
                             
@@ -123,7 +122,7 @@
                 <p class="section-name">Experiences</p>
                 <div class="exp-list">
                     <ul>
-                        <li>2020.08 - Present: Graduate Research Assistant at Graphics and Geometry Group, DCST, Tsinghua
+                        <li>2020.08 - 2023.06: Graduate Research Assistant at Graphics and Geometry Group, DCST, Tsinghua
                             University
                         </li>
                         <li>2020.06 - 2020.08: Software Engineer Intern at Tencent</li>
